# sqlite-ogc

./: .gitignore  CMakeLists.txt  README.md
extend/: coder.cpp  coder.h  extfunction.c  extfunction.h  importer.cpp  importer.h
geos-3.3.2/: CMakeLists.txt
geos-3.3.2/capi/: CMakeLists.txt
geos-3.3.2/doc/: Doxyfile
geos-3.3.2/include/geos/: version.h
geos-3.3.2/src/: CMakeLists.txt
geos-3.3.2/src/operation/buffer/: BufferOp.cpp
geos-3.3.2/swig/: geos.i
libiconv-1.11.1/: CMakeLists.txt
mitab-1.7.0/: CMakeLists.txt
mitab-1.7.0/cpl/: cpl_config.h
mitab-1.7.0/mitab/: mitab.h  mitab_feature_mif.cpp  mitab_imapinfofile.cpp  mitab_priv.h  mitab_utils.cpp
mitab-1.7.0/ogr/: ogr2gmlgeometry.cpp  ogr_api.h  ogr_geometry.h  ogr_p.h  ogrfeature.cpp  ogrgeometry.cpp  ogrutils.cpp
sqlite3/: CMakeLists.txt  shell.cpp
sqlite3-3.7.17/: CMakeLists.txt  shell.cpp  sqlite3ext.h
test/: testcase.sql
