file(GLOB_RECURSE MITAB_CPP_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/mitab/*.cpp)
file(GLOB_RECURSE MITAB_C_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/mitab/*.c)
file(GLOB_RECURSE OGR_CPP_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/ogr/*.cpp)
file(GLOB_RECURSE OGR_C_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/ogr/*.c)
file(GLOB_RECURSE CPL_CPP_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/cpl/*.cpp)
file(GLOB_RECURSE CPL_C_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/cpl/*.c)

file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/mitab/ DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/include/mitab/ FILES_MATCHING PATTERN "*.h")
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/ogr/ DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/include/ogr/ FILES_MATCHING PATTERN "*.h")
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/cpl/ DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/include/cpl/ FILES_MATCHING PATTERN "*.h")

include_directories(${CMAKE_CURRENT_BINARY_DIR}/include/mitab/)
include_directories(${CMAKE_CURRENT_BINARY_DIR}/include/ogr/)
include_directories(${CMAKE_CURRENT_BINARY_DIR}/include/cpl/)
include_directories(${CMAKE_CURRENT_BINARY_DIR}/include/)

set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/libs)

add_library(mitab STATIC ${MITAB_CPP_SOURCE} ${MITAB_C_SOURCE} ${OGR_C_SOURCE} ${OGR_CPP_SOURCE} ${CPL_CPP_SOURCE} ${CPL_C_SOURCE})
